--- a/MODAMSWeb/Areas/Users/Views/Reporting/ReportViewer.cshtml
+++ b/MODAMSWeb/Areas/Users/Views/Reporting/ReportViewer.cshtml
@@ -1,11 +1,13 @@
-﻿@{
+﻿@model MODAMS.Models.ViewModels.Dto.dtoReporting
+
+@{
     Layout = null;
 }
 
 <!DOCTYPE html>
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
-    <title>Telerik HTML5 Report Viewer</title>
+    <title>MODAMS Report Viewer</title>
 
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
@@ -16,7 +18,7 @@
     <link href="https://kendo.cdn.telerik.com/2022.3.913/styles/kendo.blueopal.min.css" rel="stylesheet" />
 
     <!--If Kendo is used it should be added before the report viewer.-->
-    <script src="/api/reports/resources/js/telerikReportViewer-17.2.23.1114.min.js/"></script>
+    <script src="/api/reports/resources/js/telerikReportViewer-18.0.24.305.min.js/"></script>
 
     <style>
         #reportViewer1 {
@@ -37,52 +39,60 @@
     </div>
 
     <script type="text/javascript">
-        $(document).ready(function () {
-            $("#reportViewer1")
-                .telerik_ReportViewer({
+        $(document).ready(() => {
 
-                    // The URL of the service which will serve reports.
-                    // The URL corresponds to the name of the controller class (ReportsController).
-                    // For more information on how to configure the service please check http://www.telerik.com/help/reporting/telerik-reporting-rest-conception.html.
-                    serviceUrl: "/api/reports",
+            let reportId = '@Model.ReportId';
+            let params = {};
+            if (reportId == "AssetReport") {
+                let storeId = parseInt('@Model.StoreId');
+                let assetStatusId = parseInt('@Model.AssetStatusId');
+                let categoryId = parseInt('@Model.CategoryId');
+                let assetConditionId = parseInt('@Model.AssetConditionId');
+                let donorId = parseInt('@Model.DonorId');
 
-                    // The URL for custom report viewer template. The template can be edited -
-                    // new functionalities can be added and unneeded ones can be removed.
-                    // For more information please check http://www.telerik.com/help/reporting/html5-report-viewer-templates.html.
-                    // templateUrl: '/ReportViewer/templates/telerikReportViewerTemplate-17.2.23.1114.html',
+                params = {
+                    StoreId: storeId,
+                    AssetStatusId: assetStatusId,
+                    CategoryId: categoryId,
+                    AssetConditionId: assetConditionId,
+                    DonorId: donorId
+                };
+            }
+            params = Object.fromEntries(Object.entries(params).filter(([_, value]) => value > 0));
+            console.log(params);
+            reportId += '.trdp';
 
-                    //ReportSource - report description
-                    reportSource: {
-                        // The report can be set to a report file name (trdx report definition)
-                        // or CLR type name (report class definition).
-                        report: "AssetReport.trdp"
-                    },
+            $("#reportViewer1").telerik_ReportViewer({
 
-                    // Specifies whether the viewer is in interactive or print preview mode.
-                    // PRINT_PREVIEW - Displays the paginated report as if it is printed on paper. Interactivity is not enabled.
-                    // INTERACTIVE - Displays the report in its original width and height without paging. Additionally interactivity is enabled.
-                    viewMode: telerikReportViewer.ViewModes.INTERACTIVE,
+                serviceUrl: "/api/reports",
+                reportSource: {
+                    report: reportId,
+                    parameters: params
+                },
 
-                    // Sets the scale mode of the viewer.
-                    // Three modes exist currently:
-                    // FIT_PAGE - The whole report will fit on the page (will zoom in or out), regardless of its width and height.
-                    // FIT_PAGE_WIDTH - The report will be zoomed in or out so that the width of the screen and the width of the report match.
-                    // SPECIFIC - Uses the scale to zoom in and out the report.
-                    scaleMode: telerikReportViewer.ScaleModes.SPECIFIC,
-
-                    // Zoom in and out the report using the scale
-                    // 1.0 is equal to 100%, i.e. the original size of the report
-                    scale: 1.0,
-                    enableAccessibility: true,
-
-                    //If set to true shows the Send Mail Message toolbar button
-                    sendEmail: { enabled: false },
-
-                    ready: function () {
-                        //this.refreshReport();
-                    },
-                });
+                viewMode: telerikReportViewer.ViewModes.INTERACTIVE,
+                scaleMode: telerikReportViewer.ScaleModes.SPECIFIC,
+                scale: 1.0,
+                enableAccessibility: true,
+                sendEmail: { enabled: false },
+                ready: function () {
+                    //this.refreshReport();
+                }
+            });
         });
+
+        const generateReport = () => {
+            params = {
+                StoreId: 17,
+                AssetStatusId: 1
+            };
+
+            var viewer = $("#reportViewer1").data("telerik_ReportViewer");
+            viewer.reportSource({
+                report: viewer.reportSource().report,
+                parameters: params
+            });
+        }
     </script>
 
 </body>
