--- a/MODAMSWeb/Views/Shared/_Layout.cshtml
+++ b/MODAMSWeb/Views/Shared/_Layout.cshtml
@@ -6,7 +6,11 @@
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.6.0/Chart.bundle.min.js"></script>
     <script src="~/assets/plugins/chart/chartjs-plugin-labels.js"></script>
-    
+    <style>
+        .card {
+            background-color: #f0f0f0; /* Light gray background color */
+        }   
+    </style>
     <!-- FAVICON -->
     <link rel="shortcut icon" type="image/x-icon" href="~/assets/images/brand/favicon.ico" />
 
@@ -14,7 +18,8 @@
     <title>MOD Asset Management System</title>
 
     <!-- BOOTSTRAP CSS -->
-    <link id="style" href="~/assets/plugins/bootstrap/css/bootstrap.min.css" asp-append-version="true" rel="stylesheet" />
+    @* <link id="style" href="~/assets/plugins/bootstrap/css/bootstrap.min.css" asp-append-version="true" rel="stylesheet" /> *@
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
 
     
     <!-- Bootstrap Datepicker CSS -->
@@ -71,8 +76,7 @@
     
 	<link href="https://kendo.cdn.telerik.com/themes/7.0.2/bootstrap/bootstrap-main.css" rel="stylesheet" type="text/css" />
 
-    @* <script src="~/assets/plugins/bootstrap-datepicker/js/datepicker.js"></script> *@
-	<script src="https://code.jquery.com/jquery-3.7.1.min.js"></script>
+    <script src="https://code.jquery.com/jquery-3.7.1.min.js"></script>
 	<script src="https://cdn.kendostatic.com/2023.2.606/js/jquery.min.js"></script>
 	<script src="https://cdn.kendostatic.com/2023.2.606/js/jszip.min.js"></script>
 	<script src="https://cdn.kendostatic.com/2023.2.606/js/kendo.all.min.js"></script>
@@ -119,10 +123,13 @@
     @**@
 
     <!-- Bootstrap JS (required) -->
-    <script src="~/assets/plugins/bootstrap/js/bootstrap.min.js"></script>
+    @* <script src="~/assets/plugins/bootstrap/js/bootstrap.min.js"></script> *@
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
+
     <!-- Bootstrap Datepicker JS -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap-datepicker@1.9.0/dist/js/bootstrap-datepicker.min.js"></script>
-    <script src="~/assets/plugins/bootstrap/js/popper.min.js"></script>
+    
+    
 
     
 
@@ -179,6 +186,10 @@
     <script src="~/js/kendo-ui-license.js"></script>
     <section id="dvProfileData" style="display:none;"></section>
     <script src="~/assets/plugins/moment/moment.js"></script>
+
+    @* <script src="~/assets/plugins/bootstrap/js/popper.min.js"></script> *@
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/2.11.8/umd/popper.min.js" integrity="sha512-TPh2Oxlg1zp+kz3nFA0C5vVC6leG/6mm1z9+mA81MI5eaUVqasPLO8Cuk4gMF4gUfP5etR73rgU/8PNMsSesoQ==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+
     <script>
         $(document).ready(() => {
             setMode();
