--- a/MODAMSWeb/Areas/Users/Views/Home/Index.cshtml
+++ b/MODAMSWeb/Areas/Users/Views/Home/Index.cshtml
@@ -149,7 +149,7 @@
                 <div class="card-body pnlHeight">
                     <div class="row">
                         <div class="col">
-                            <h3 class="mb-2 fw-semibold">Stores</h3>
+                            <h3 class="mb-2 fw-semibold text-muted">Stores</h3>
                             <p class="text-muted fs-13 mb-0">Stores</p>
                         </div>
                         <div class="col col-auto top-icn dash">
@@ -176,7 +176,7 @@
                 <div class="card-body pnlHeight">
                     <div class="row">
                         <div class="col">
-                            <h3 class="mb-2 fw-semibold">Transfers</h3>
+                            <h3 class="mb-2 fw-semibold text-muted">Transfers</h3>
                             <p class="text-muted fs-13 mb-0 text-secondary">Asset Transfers</p>
                         </div>
                         <div class="col col-auto top-icn dash">
@@ -204,7 +204,7 @@
                 <div class="card-body pnlHeight">
                     <div class="row">
                         <div class="col">
-                            <h3 class="mb-2 fw-semibold">Disposal</h3>
+                            <h3 class="mb-2 fw-semibold text-muted">Disposal</h3>
                             <p class="text-muted fs-13 mb-0">Asset Disposal</p>
                         </div>
                         <div class="col col-auto top-icn dash">
@@ -233,7 +233,7 @@
                 <div class="card-body pnlHeight">
                     <div class="row">
                         <div class="col">
-                            <h3 class="mb-2 fw-semibold">Reports</h3>
+                            <h3 class="mb-2 fw-semibold text-muted">Reports</h3>
                             <p class="text-muted fs-13 mb-0">Reporting</p>
                         </div>
                         <div class="col col-auto top-icn dash">
