--- a/MODAMSWeb/Areas/Users/Views/Reporting/Index.cshtml
+++ b/MODAMSWeb/Areas/Users/Views/Reporting/Index.cshtml
@@ -25,73 +25,75 @@
 </div>
 <div class="card">
     <div class="card-body project-list-table-container">
-        <div class="row">
-            <div class="col-md-3">
+        <div class="row d-flex">
+            <div class="col-md-3 flex-fill">
                 <div class="card divShadow">
                     <div class="card-status bg-primary br-tr-7 br-tl-7"></div>
                     <div class="card-body pnlHeight">
-                        <form method="post" asp-action="ReportViewer" id="frmAssetReport">
-                            <input type="hidden" name="ReportId" id="ReportId" value="AssetReport" />
+                        <div class="row">
+                            <div class="col">
+                                <h3 class="mb-2 fw-semibold text-muted">Assets</h3>
+                                <p class="text-muted fs-13 mb-0">Asset Report</p>
+                            </div>
+                            <div class="col col-auto top-icn dash">
+                                <div class="counter-icon bg-primary dash ms-auto box-shadow-primary">
+                                    <svg xmlns="http://www.w3.org/2000/svg" width="25" height="25" fill="currentColor" class="bi bi-archive" viewBox="0 0 16 16"> <path d="M0 2a1 1 0 0 1 1-1h14a1 1 0 0 1 1 1v2a1 1 0 0 1-1 1v7.5a2.5 2.5 0 0 1-2.5 2.5h-9A2.5 2.5 0 0 1 1 12.5V5a1 1 0 0 1-1-1V2zm2 3v7.5A1.5 1.5 0 0 0 3.5 14h9a1.5 1.5 0 0 0 1.5-1.5V5H2zm13-3H1v2h14V2zM5 7.5a.5.5 0 0 1 .5-.5h5a.5.5 0 0 1 0 1h-5a.5.5 0 0 1-.5-.5z" /> </svg>
+                                </div>
+                            </div>
+
                             <div class="row">
                                 <div class="col">
-                                    <h3 class="mb-2 fw-semibold">Assets</h3>
-                                    <p class="text-muted fs-13 mb-0">Asset Report</p>
-                                </div>
-                                <div class="col col-auto top-icn dash">
-                                    <div class="counter-icon bg-primary dash ms-auto box-shadow-primary">
-                                        <svg xmlns="http://www.w3.org/2000/svg" width="25" height="25" fill="currentColor" class="bi bi-archive" viewBox="0 0 16 16"> <path d="M0 2a1 1 0 0 1 1-1h14a1 1 0 0 1 1 1v2a1 1 0 0 1-1 1v7.5a2.5 2.5 0 0 1-2.5 2.5h-9A2.5 2.5 0 0 1 1 12.5V5a1 1 0 0 1-1-1V2zm2 3v7.5A1.5 1.5 0 0 0 3.5 14h9a1.5 1.5 0 0 0 1.5-1.5V5H2zm13-3H1v2h14V2zM5 7.5a.5.5 0 0 1 .5-.5h5a.5.5 0 0 1 0 1h-5a.5.5 0 0 1-.5-.5z" /> </svg>
-                                    </div>
-                                </div>
-                                <div class="row">
-                                    <div class="col">
+                                    <hr class="customHR w-100" />
+                                    <form method="post" asp-action="ReportViewer" id="frmAssetReport">
+                                        <input type="hidden" name="ReportId" id="ReportId" value="AssetReport" />
                                         <div class="form-group">
-                                            <select asp-for="@Model.StoreId" asp-items="@Model.Stores"
+                                            <select asp-for="AssetStoreId" asp-items="@Model.AssetStores"
                                                     class="form-control select2 form-select">
                                                 <option value="0">All Stores</option>
                                             </select>
                                         </div>
                                         <div class="form-group">
-                                            <select asp-for="@Model.AssetStatusId" asp-items="@Model.AssetStatuses"
+                                            <select asp-for="AssetStatusId" asp-items="@Model.AssetStatuses"
                                                     class="form-control select2 form-select">
                                                 <option value="0">All Statuses</option>
                                             </select>
                                         </div>
                                         <div class="form-group">
-                                            <select asp-for="@Model.CategoryId" asp-items="@Model.Categories"
+                                            <select asp-for="CategoryId" asp-items="@Model.Categories"
                                                     class="form-control select2 form-select">
                                                 <option value="0">All Categories</option>
                                             </select>
                                         </div>
                                         <div class="form-group">
-                                            <select asp-for="@Model.AssetConditionId" asp-items="@Model.Conditions"
+                                            <select asp-for="AssetConditionId" asp-items="@Model.Conditions"
                                                     class="form-control select2 form-select">
                                                 <option value="0">All Conditions</option>
                                             </select>
                                         </div>
-
                                         <div class="form-group">
-                                            <select asp-for="@Model.DonorId" asp-items="@Model.Donors"
+                                            <select asp-for="DonorId" asp-items="@Model.Donors"
                                                     class="form-control select2 form-select">
                                                 <option value="0">All Donors</option>
                                             </select>
                                         </div>
                                         <div class="form-group flex text-center">
-                                            <button class="btn btn-primary"><i class="fa fa-print"></i>&nbsp;Generate Report</button>
+                                            <button class="btn btn-primary" id="btnSubmitAssetReport"><i class="fa fa-print"></i>&nbsp;Generate Report</button>
                                         </div>
-                                    </div>
+                                    </form>
                                 </div>
                             </div>
-                        </form>
+
+                        </div>
                     </div>
                 </div>
             </div>
-            <div class="col-md-3">
+            <div class="col-md-3 flex-fill">
                 <div class="card divShadow">
                     <div class="card-status bg-secondary br-tr-7 br-tl-7"></div>
                     <div class="card-body pnlHeight">
                         <div class="row">
                             <div class="col">
-                                <h3 class="mb-2 fw-semibold">Transfers</h3>
+                                <h3 class="mb-2 fw-semibold text-muted">Transfers</h3>
                                 <p class="text-muted fs-13 mb-0 text-secondary">Transfer Report</p>
                             </div>
                             <div class="col col-auto top-icn dash">
@@ -101,31 +103,47 @@
                             </div>
                             <div class="row">
                                 <div class="col">
-                                    @* <div class="form-group">
-                                        <select asp-for="@Model.StoreId" asp-items="@Model.Stores"
-                                                class="form-control select2 form-select">
-                                            <option value="0">All Stores</option>
-                                        </select>
-                                    </div>
-                                    <div class="form-group">
-                                        <select asp-for="@Model.AssetStatusId" asp-items="@Model.AssetStatuses"
-                                                class="form-control select2 form-select">
-                                            <option value="0">All Statuses</option>
-                                        </select>
-                                    </div> *@
+                                    <hr class="customHR w-100" />
+                                    <form method="post" asp-action="ReportViewer" id="frmTransferReport">
+                                        <input type="hidden" name="ReportId" id="ReportId" value="TransferReport" />
+                                        <div class="form-group">
+                                            <label asp-for="StoreFromId"></label>
+                                            <select asp-for="StoreFromId" asp-items="@Model.TransferStores"
+                                                    class="form-control select2 form-select">
+                                                <option value="0">All Stores</option>
+                                            </select>
+                                        </div>
+                                        <div class="form-group">
+                                            <label asp-for="StoreToId"></label>
+                                            <select asp-for="StoreToId" asp-items="@Model.TransferStores"
+                                                    class="form-control select2 form-select">
+                                                <option value="0">All Stores</option>
+                                            </select>
+                                        </div>
+                                        <div class="form-group">
+                                            <label asp-for="TransferStatusId"></label>
+                                            <select asp-for="TransferStatusId" asp-items="@Model.TransferStatuses"
+                                                    class="form-control select2 form-select">
+                                                <option value="0">All Statuses</option>
+                                            </select>
+                                        </div>
+                                        <div class="form-group flex text-center">
+                                            <button class="btn btn-secondary" id="btnSubmitTransferReport"><i class="fa fa-print"></i>&nbsp;Generate Report</button>
+                                        </div>
+                                    </form>
                                 </div>
                             </div>
                         </div>
                     </div>
                 </div>
             </div>
-            <div class="col-md-3">
+            <div class="col-md-3 flex-fill">
                 <div class="card divShadow">
                     <div class="card-status bg-info br-tr-7 br-tl-7"></div>
                     <div class="card-body pnlHeight">
                         <div class="row">
                             <div class="col">
-                                <h3 class="mb-2 fw-semibold">Disposal</h3>
+                                <h3 class="mb-2 fw-semibold text-muted">Disposal</h3>
                                 <p class="text-muted fs-13 mb-0">Disposal Report</p>
                             </div>
                             <div class="col col-auto top-icn dash">
@@ -137,16 +155,35 @@
                             </div>
                             <div class="row">
                                 <div class="col">
-                                    <small class="text-muted">
-                                        Disposal of Assets that includes selling, recycling, donating, or scrapping the asset.
-                                    </small>
                                 </div>
                             </div>
                         </div>
                     </div>
                 </div>
             </div>
-            <div class="col-md-3">
+            <div class="col-md-3 flex-fill">
+                <div class="card divShadow">
+                    <div class="card-status bg-info br-tr-7 br-tl-7"></div>
+                    <div class="card-body pnlHeight">
+                        <div class="row">
+                            <div class="col">
+                                <h3 class="mb-2 fw-semibold text-muted">Verifications</h3>
+                                <p class="text-muted fs-13 mb-0">Asset Verifications Report</p>
+                            </div>
+                            <div class="col col-auto top-icn dash">
+                                <div class="counter-icon bg-gray dash ms-auto box-shadow-primary">
+                                    <svg xmlns="http://www.w3.org/2000/svg" width="25" height="25" fill="currentColor" class="bi bi-list-check" viewBox="0 0 16 16">
+                                        <path fill-rule="evenodd" d="M5 11.5a.5.5 0 0 1 .5-.5h9a.5.5 0 0 1 0 1h-9a.5.5 0 0 1-.5-.5zm0-4a.5.5 0 0 1 .5-.5h9a.5.5 0 0 1 0 1h-9a.5.5 0 0 1-.5-.5zm0-4a.5.5 0 0 1 .5-.5h9a.5.5 0 0 1 0 1h-9a.5.5 0 0 1-.5-.5zM3.854 2.146a.5.5 0 0 1 0 .708l-1.5 1.5a.5.5 0 0 1-.708 0l-.5-.5a.5.5 0 1 1 .708-.708L2 3.293l1.146-1.147a.5.5 0 0 1 .708 0zm0 4a.5.5 0 0 1 0 .708l-1.5 1.5a.5.5 0 0 1-.708 0l-.5-.5a.5.5 0 1 1 .708-.708L2 7.293l1.146-1.147a.5.5 0 0 1 .708 0zm0 4a.5.5 0 0 1 0 .708l-1.5 1.5a.5.5 0 0 1-.708 0l-.5-.5a.5.5 0 0 1 .708-.708l.146.147 1.146-1.147a.5.5 0 0 1 .708 0z"></path>
+                                    </svg>
+                                </div>
+                            </div>
+                            <div class="row">
+                                <div class="col">
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
             </div>
         </div>
     </div>
@@ -155,6 +192,21 @@
         <script>
             $(document).ready(() => {
                 $('.select2').select2();
+                $('#btnSubmitAssetReport').on("click", (e) => {
+                    e.preventDefault();
+                    var form = document.getElementById('frmAssetReport');
+                    form.target = '_blank';
+                    form.action = 'ReportViewer';
+                    form.submit();
+                    //$('#frmAssetReport').submit();
+                });
+
+                resizeCards();
             });
+
+            const resizeCards = () => {
+                var firstCardHeight = $('.col-md-3:first-child .card').outerHeight();
+                $('.col-md-3 .card').css('height', firstCardHeight + 'px');
+            }
         </script>
     }
