--- a/MODAMSWeb/Areas/Users/Views/Transfers/PreviewTransfer.cshtml
+++ b/MODAMSWeb/Areas/Users/Views/Transfers/PreviewTransfer.cshtml
@@ -56,6 +56,15 @@
         height: 50px;
     }
 </style>
+<style>
+    .barcode-container {
+        text-align: center;
+    }
+
+    .barcode-text {
+        margin-bottom: 5px;
+    }
+</style>
 <div class="page-header">
     <div>
         <h1 class="page-title">Asset Transfers</h1>
@@ -149,50 +158,43 @@
                                                     </tbody>
                                                 </table>
                                                 <br /><br /><br /><br /><br /><br /><br /><br /><br />
-                                                <div class="flex w-75 center-align" style="margin-left:100px;">
-                                                    <div class="flex w-100">
-                                                        <div class="float-start left-align">Transfer By</div>
-                                                        <div class="float-end left-align">
-                                                            @{
-                                                                if (Model.vwTransfer.TransferStatusId == 4)
-                                                                {
-                                                                    @Html.Raw("<span class=\"text-danger\">Rejected By</span>");
-                                                                }
-                                                                else
-                                                                {
-                                                                    @Html.Raw("<span class=\"text-success\">Received By</span>");
-                                                                }
-                                                            }
-                                                            
-                                                        </div>
-                                                    </div>
-                                                </div>
-
                                                 <div class="flex w-100 center-align" style="margin-left:50px;">
                                                     <div class="flex w-100">
                                                         <div class="float-start left-align">
                                                             @{
                                                                 if (Model.vwTransfer.TransferStatusId > SD.Transfer_Pending)
                                                                 {
-                                                                    <kendo-barcode name="barcode0" class="barcode" value="@Model.TransferBy" type="BarcodeSymbology.Code128">
-                                                                    </kendo-barcode>
+                                                                    <div class="barcode-container">
+                                                                        <div class="barcode-text">Transfer By</div>
+                                                                        <span style="font-family: Freestyle Script; font-size: 25pt;">
+                                                                            @Model.vwTransfer.SenderBarcode
+                                                                        </span>
+                                                                        <div class="barcode-text">
+                                                                            @Model.vwTransfer.SubmissionforAcknowledgementDate?.ToString("D")
+                                                                        </div>
+                                                                    </div>
                                                                 }
                                                             }
-
                                                         </div>
                                                         <div class="float-end left-align" style="margin-right:160px;">
                                                             @{
                                                                 if (Model.vwTransfer.TransferStatusId > SD.Transfer_SubmittedForAcknowledgement)
                                                                 {
-                                                                    <kendo-barcode name="barcode1" class="barcode" value="@Model.ReceivedBy" type="BarcodeSymbology.Code128">
-                                                                    </kendo-barcode>
+                                                                    <div class="barcode-container">
+                                                                        <div class="barcode-text">Received By</div>
+                                                                        <span style="font-family: Freestyle Script; font-size: 25pt;">
+                                                                            @Model.vwTransfer.ReceiverBarcode
+                                                                        </span>
+                                                                        <div class="barcode-text">@Model.vwTransfer.AcknowledgementDate?.ToString("D")</div>
+                                                                    </div>
                                                                 }
                                                             }
-
                                                         </div>
                                                         <br /><br />
                                                     </div>
                                                 </div>
+                                            </div>
+                                            <div class="card-footer">
                                             </div>
                                         </div>
 
@@ -202,7 +204,7 @@
                         </div>
                     </div>
                     <div class="col-md-4">
-                        <div class="card">
+                        <div class="card" id="divAction">
                             <div class="card-body divShadow center-align" id="dvAction">
                                 @{
                                     if (Model.vwTransfer.TransferStatusId == SD.Transfer_Pending)
@@ -210,7 +212,7 @@
                                         if (Model.IsSender)
                                         {
                                             <form method="post" asp-action="SubmitForAcknowledgement" id="frmSubmitForAcknowledgement">
-                                                <input type="hidden" name="id" value="@Model.vwTransfer.Id"/>
+                                                <input type="hidden" name="id" value="@Model.vwTransfer.Id" />
                                                 <button type="submit" class="btn btn-primary " id="btnSubmit">
                                                     <i class="fa fa-check-circle"></i><span class="loading">&nbsp;Submit for Acknowledgement</span>
                                                 </button>
@@ -218,7 +220,8 @@
                                         }
                                         else
                                         {
-                                            @Html.Raw("<span>No action required</span>");
+                                            @Html.Raw("<span id=\"spnAction\">No action required</span>")
+                                            ;
                                         }
                                     }
                                     else if (Model.vwTransfer.TransferStatusId == SD.Transfer_SubmittedForAcknowledgement)
@@ -241,13 +244,25 @@
                                         }
                                         else
                                         {
-                                            @Html.Raw("<span>No action required</span>");
+                                            @Html.Raw("<span id=\"spnAction\">No action required</span>")
                                         }
                                     }
                                     else
                                     {
-                                        @Html.Raw("<span>No action required</span>");
+                                        @Html.Raw("<span id=\"spnAction\">No action required</span>")
                                     }
+                                }
+                            </div>
+                        </div>
+                        <div class="card">
+                            <div class="card-body divShadow center-align">
+                                @{
+                                    <form method="post" asp-action="PrintVoucher" id="frmPrintVoucher">
+                                        <input type="hidden" name="id" value="@Model.vwTransfer.Id" />
+                                        <button type="submit" class="btn btn-info" id="btnSubmit">
+                                            <i class="fa fa-print"></i>&nbsp;<span class="loading">&nbsp;Print Voucher</span>
+                                        </button>
+                                    </form>
                                 }
                             </div>
                         </div>
@@ -265,15 +280,25 @@
         </div>
     </div>
 </div>
-@section scripts{
+@section scripts {
     <script>
         $(document).ready(function () {
             hideMenu();
-            $("#btnSubmit").on("click",(e)=>{
+            $("#btnSubmit").on("click", (e) => {
                 //e.preventDefault();
                 $("#btnSubmit").addClass("btn-loading btn-icon");
             });
+
+            checkForAction();
+
         });
+
+        const checkForAction = () => {
+
+            if ($('#spnAction').html() == "No action required")
+                $("#divAction").hide();
+        }
+
 
     </script>
 }
