--- a/MODAMSWeb/Views/Shared/_Layout.cshtml
+++ b/MODAMSWeb/Views/Shared/_Layout.cshtml
@@ -9,7 +9,7 @@
     <style>
         .card {
             background-color: #f0f0f0; /* Light gray background color */
-        }   
+        }
     </style>
     <!-- FAVICON -->
     <link rel="shortcut icon" type="image/x-icon" href="~/assets/images/brand/favicon.ico" />
@@ -21,7 +21,7 @@
     @* <link id="style" href="~/assets/plugins/bootstrap/css/bootstrap.min.css" asp-append-version="true" rel="stylesheet" /> *@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
 
-    
+
     <!-- Bootstrap Datepicker CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap-datepicker@1.9.0/dist/css/bootstrap-datepicker.min.css" rel="stylesheet">
 
@@ -54,33 +54,37 @@
             border: 1px solid lightblue;
             box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2), 0px 6px 20px 0px rgba(0,0,0,0.19);
         }
+
         .form-control {
             border-color: #ced4da;
         }
+
             .form-control:focus {
                 border-color: green;
                 border: 1px solid lightblue;
                 box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2), 0px 6px 20px 0px rgba(0,0,0,0.19);
             }
+
         .select2:focus {
             border-color: green;
             border: 1px solid lightblue;
             box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2), 0px 6px 20px 0px rgba(0,0,0,0.19);
         }
+
         .form-control:disabled {
             background-color: #e9ecef;
             opacity: 1;
         }
     </style>
     @* Add the Kendo UI scripts: *@
-    
-	<link href="https://kendo.cdn.telerik.com/themes/7.0.2/bootstrap/bootstrap-main.css" rel="stylesheet" type="text/css" />
+
+    <link href="https://kendo.cdn.telerik.com/themes/7.0.2/bootstrap/bootstrap-main.css" rel="stylesheet" type="text/css" />
 
     <script src="https://code.jquery.com/jquery-3.7.1.min.js"></script>
-	<script src="https://cdn.kendostatic.com/2023.2.606/js/jquery.min.js"></script>
-	<script src="https://cdn.kendostatic.com/2023.2.606/js/jszip.min.js"></script>
-	<script src="https://cdn.kendostatic.com/2023.2.606/js/kendo.all.min.js"></script>
-	<script src="https://cdn.kendostatic.com/2023.2.606/js/kendo.aspnetmvc.min.js"></script>
+    <script src="https://cdn.kendostatic.com/2023.2.606/js/jquery.min.js"></script>
+    <script src="https://cdn.kendostatic.com/2023.2.606/js/jszip.min.js"></script>
+    <script src="https://cdn.kendostatic.com/2023.2.606/js/kendo.all.min.js"></script>
+    <script src="https://cdn.kendostatic.com/2023.2.606/js/kendo.aspnetmvc.min.js"></script>
 </head>
 <body class="app sidebar-mini ltr">
 
@@ -89,7 +93,6 @@
         <img src="~/assets/images/loader.svg" class="loader-img" alt="Loader">
     </div>
     <!-- /GLOBAL-LOADER -->
-
     <!-- PAGE -->
     <div class="page">
         <div class="page-main">
@@ -128,10 +131,10 @@
 
     <!-- Bootstrap Datepicker JS -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap-datepicker@1.9.0/dist/js/bootstrap-datepicker.min.js"></script>
-    
-    
 
-    
+
+
+
 
     <!-- SIDE-MENU JS -->
     <script src="~/assets/plugins/sidemenu/sidemenu.js"></script>
@@ -207,7 +210,7 @@
         });
         const formatTables = () => {
 
-            $('thead').removeClass("bg-primary-gradient ms-auto divShadow").addClass("bg-primary-gradient ms-auto divShadow");
+            $('thead').addClass("bg-info-gradient ms-auto divShadow");
             $('th').addClass("text-white");
 
             //$('.even').addClass("bg-light-transparent");
@@ -331,18 +334,18 @@
                         break; // Exit the loop once nCounter exceeds 4
                     }
                     sHtml += `
-                        <a class="dropdown-item ${sbgClass}" href="/Users/Home/NotificationDirector/${e.Id}">
-                            <div class="notification-each d-flex ">
-                                <div class="avatar-container avatar-md me-2">
-                                    <img alt="avatar" class="rounded-circle" src="${e.ImageUrl}">
-                                </div>
-                                <div>
-                                    <span class="notification-label mb-1">${shortenMessage(e.Message)}</span>
-                                            ${sPulse}
-                                    <span class="notification-subtext text-muted">${formattedDate(e.DateTime)}</span>
-                                </div>
-                            </div>
-                        </a>`;
+                                <a class="dropdown-item ${sbgClass}" href="/Users/Home/NotificationDirector/${e.Id}">
+                                    <div class="notification-each d-flex ">
+                                        <div class="avatar-container avatar-md me-2">
+                                            <img alt="avatar" class="rounded-circle" src="${e.ImageUrl}">
+                                        </div>
+                                        <div>
+                                            <span class="notification-label mb-1">${shortenMessage(e.Message)}</span>
+                                                    ${sPulse}
+                                            <span class="notification-subtext text-muted">${formattedDate(e.DateTime)}</span>
+                                        </div>
+                                    </div>
+                                </a>`;
                 }
 
                 $("#dvNotifications").html(sHtml);
@@ -356,23 +359,22 @@
                     }
                 } else {
                     notificationPulse.hide();
-                    sHtml = `
-                            <a class="dropdown-item" href="#">
-                                <div class="notification-each d-flex">
-                                    <div class="me-3 notifyimg brround">
-                                    </div>
-                                    <div>
-                                        <span class="notification-label mb-1">No notification available</span>
-                                    </div>
-                                </div>
-                            </a>`;
+                    sHtml = `<a class="dropdown-item" href="#">
+                                        <div class="notification-each d-flex">
+                                            <div class="me-3 notifyimg brround">
+                                            </div>
+                                            <div>
+                                                <span class="notification-label mb-1">No notification available</span>
+                                            </div>
+                                        </div>
+                                    </a>`;
                     $("#dvNotifications").html(sHtml);
                 }
-            } else{
+            } else {
                 $("#notification-pulse").hide();
             }
         };
-        const clearNotifications = () => { 
+        const clearNotifications = () => {
             var postData = {};
             $.ajax({
                 url: '/Users/Home/ClearNotifications',
@@ -381,10 +383,18 @@
                 beforeSend: function () {
                 },
                 success: function (e) {
-                    
+                    $("#dvNotifications").html(`<a class="dropdown-item" href="#">
+                                                <div class="notification-each d-flex">
+                                                    <div class="me-3 notifyimg brround">
+                                                    </div>
+                                                    <div>
+                                                        <span class="notification-label mb-1">No notification available</span>
+                                                    </div>
+                                                </div>
+                                            </a>`);
                 },
                 complete: function () {
-                    loadNotificationsData();
+                    //loadNotificationsData();
                 }
             });
         }
@@ -395,12 +405,25 @@
                 language: {
                     searchPlaceholder: 'Search...',
                     sSearch: '',
+                },
+                initComplete: function (settings, json) {
+                    // Change color of specific buttons
+                    $(tableName + '_wrapper .btn-primary')
+                        .removeClass('btn-primary')
+                        .addClass('bg-info')
+                        .css('color', 'white');
+
+                    // Change color of pagination buttons
+                    $(tableName + '_wrapper .paginate_button')
+                        .removeClass('paginate_button')
+                        .addClass('bg-info')
+                        .css('color', 'white');
                 }
             });
-            
+
             $('.even').addClass("bg-light-transparent");
             $('.odd').removeClass("bg-light-transparent");
-            
+
             table.on('page.dt', function () {
                 table.rows().invalidate().draw(false);
                 $('.even').addClass("bg-light-transparent");
@@ -411,11 +434,20 @@
                 $('.even').addClass("bg-light-transparent");
                 $('.odd').removeClass("bg-light-transparent");
             });
-            
+
             if (type == "2") {
                 table.buttons().container()
                     .appendTo(tableName + '_wrapper .col-md-6:eq(0)');
             }
+
+            $(tableName + '_wrapper .btn-primary')
+                .removeClass('btn-primary')
+                .addClass('bg-info')
+                .css('color', 'white');
+
+            $(tableName + '_wrapper .paginate_button')
+                .removeClass('btn-primary')
+                .addClass('bg-info');
 
         }
         const formattedDate = (date) => {
@@ -428,9 +460,9 @@
         const hideMenu = () => {
             $("#hideMenu").click();
         }
-        const shortenMessage = (message) => { 
+        const shortenMessage = (message) => {
             const index = message.indexOf(',');
-            if (index !== -1) { 
+            if (index !== -1) {
                 message = message.substring(0, index);
             }
             return message;
